# langchain-milvus

./: .gitignore  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check_diff.py  get_min_versions.py  patch_milvus_script.py  setup_milvus_with_apikey.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/milvus/: .gitignore  Makefile  pyproject.toml
libs/milvus/langchain_milvus/: __init__.py  function.py
libs/milvus/langchain_milvus/retrievers/: milvus_hybrid_search.py  zilliz_cloud_pipeline_retriever.py
libs/milvus/langchain_milvus/utils/: constant.py  sparse.py
libs/milvus/langchain_milvus/vectorstores/: milvus.py  zilliz.py
libs/milvus/tests/: test_milvus_base.py  test_milvus_base_async.py  utils.py
libs/milvus/tests/integration_tests/: utils.py
libs/milvus/tests/integration_tests/vectorstores/: test_milvus.py  test_milvus_async.py  test_milvus_sync.py
libs/milvus/tests/unit_tests/: test_imports.py
libs/milvus/tests/unit_tests/vectorstores/: test_milvus.py
