[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "langchain-milvus"
version = "0.2.2"
description = "An integration package connecting Milvus and LangChain"
authors = []
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "pymilvus>=2.5.7,<3.0",
    "langchain-core>=1.0.0",
]

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-milvus/tree/main/libs/milvus"
"Release Notes" = "https://github.com/langchain-ai/langchain-milvus/releases"
Repository = "https://github.com/langchain-ai/langchain-milvus"

[tool.ruff]
select = ["E", "F", "I", "T201"]

[tool.mypy]
disallow_untyped_defs = "True"
[[tool.mypy.overrides]]
module = ["pymilvus"]
ignore_missing_imports = "True"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
syrupy = "^4.0.2"
pytest-watcher = "^0.3.4"
pytest-asyncio = "^0.21.1"
"pymilvus.model" = "^0.3.1"
milvus-lite = "^2.5.1"
onnxruntime = "<= 1.19.2"  # the higher version of onnxruntime can not be found in the CI installation
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.test_integration.dependencies]
"pymilvus.model" = "^0.3.1"
onnxruntime = "<= 1.19.2"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-requests = "^2"
simsimd = "^5.0.0"
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }

[tool.poetry.group.dev.dependencies]
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
